Fix GitHub corner styling to have higher z-index and correct cursor

--- a/assets/style.css
+++ b/assets/style.css
@@ -46,51 +46,51 @@ a:visited {
   height: 800px;
 }
 
-.github-corner {
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 100;
-}
-
-path {
+.container path {
   cursor: crosshair;
 }
 
-svg {
+.container svg {
   float: left;
   margin: 0 0px 0px 10px;
 }
 
-table {
+.container table {
   float: left;
   display: block;
   height: 500px;
   overflow-y: scroll;
 }
 
-table th {
+.container table th {
   cursor: pointer;
 }
 
-table td {
+.container table td {
   padding: 0 10px 0 0;
   width: 120px;
 }
 
-table td:first-child {
+.container table td:first-child {
   width: 200px;
 }
 
-table td.no-padding {
+.container table td.no-padding {
   padding: 0;
 }
 
-table td.no-padding input {
+.container table td.no-padding input {
   width: 100%;
   box-sizing: border-box;
 }
 
-table tr:nth-child(even) {
+.container table tr:nth-child(even) {
   background-color: #f4f4f4;
+}
+
+.github-corner {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  right: 0;
 }
